[package]
name = "theban_db_interface"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]
license-file = "LICENSE"
repository = "https://github.com/theban/db-interface"
description = "a common interface for the db-server and the datastructure"

[dependencies]
rmp = "0.7.*"
rmp-serialize = "0.7.*"
rustc-serialize = "0.3.*"
quick-error = "1.0.0"
unix_socket = "0.5.*"
memrange = "0.1.*"
theban_db = "0.5.*"
theban_interval_tree = "0.6.*"
theban_db_server = "0.3.*"
